@@ -38,6 +38,9 @@
 <p>2017-10-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/command.c (MontageImageCommand): Fix memory leaks in
+error return path.  Only people doing leak testing or the few who
+execute MontageImageCommand() as a function will care about this.</li>
 <li>magick/studio.h (NumberOfObjectsInArray): The
 NumberOfObjectsInArray() macro is used to compute the number of
 whole objects in an array.  Instead it was rounding up, resulting
